# woodwork

./: .gitignore  pyproject.toml  requirements.txt  setup.py  testTrain.py
examples/: imageGeneration.py  testTrain.py
woodwork/: __init__.py
woodwork/auth/: README.md  __init__.py  drive.py  earthengine.py
woodwork/utils/: __init__.py  drive.py  earthengine.py  ee.py
